# tts-sync

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  audio_libraries_analysis.md  guide.md  library_architecture.md  research_notes.md  todo.md  tts_sync_algorithm.md
examples/: examples.rs
src/: error.rs  lib.rs  logging.rs  mod.rs
src/audio/: analysis.rs  mod.rs  models.rs  synchronizer.rs  tempo.rs  utils.rs
src/audio/adjustment/: mod.rs  processor.rs  synchronizer.rs  tempo.rs
src/progress/: mod.rs  tracker.rs
src/sync/: core.rs  mod.rs
src/tts/: mod.rs  openai.rs
src/vtt/: mod.rs  models.rs  parser.rs
tests/: audio_processing_test.rs  sync_core_test.rs  tts_sync_test.rs  vtt_parser_test.rs
