[package]
name = "tts-sync"
version = "0.1.3"
edition = "2021"
description = "A library for synchronizing TTS with video and subtitles, with advanced audio processing and tempo adjustment"
authors = ["Pavel Pavlenko + AI <region23@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/region23/tts-sync"
documentation = "https://docs.rs/tts-sync"
readme = "README.md"
keywords = ["tts", "audio", "subtitles", "synchronization", "video"]
categories = ["multimedia", "text-processing", "audio"]
rust-version = "1.56"

[dependencies]
# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Parsing
regex = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"
chrono = "0.4"

# Audio processing
rubato = "0.14"
symphonia = { version = "0.5", features = ["mp3", "wav", "ogg"] }

# OpenAI API
reqwest = { version = "0.11", features = ["json", "multipart"] }
async-trait = "0.1"

# Utilities
once_cell = "1.19"

[dev-dependencies]
# Testing
assert_fs = "1.1"
predicates = "3.0"
tokio-test = "0.4"
tempfile = "3.10"
criterion = "0.5"

[features]
default = ["std"]
std = []
benchmarks = []
